--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             </div>
         </div>
         <div class="trincada"><p id="quebrada"></p></div>
+        <div class="about">
+            <details><p>Clik na lâmpada para quebra-la!</p></details>
+        </div>
     </div>
 
     <script src="src/javascript/script.js"></script>
